// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch snapshot checked  and disable - true 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.c0:active > div > div {
  width: 0.75rem;
  left: 1.25rem;
}

.c0:active > div {
  box-shadow: none;
  background-color: #e9ecef;
}

.c1 {
  background-color: #e1e5eb;
  border-radius: 100px;
  border: .0625rem solid #e1e5eb;
  width: 2.1875rem;
  height: 1.125rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 5px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  box-shadow: none;
}

.c2 {
  content: '';
  position: absolute;
  left: 1.25rem;
  width: .75rem;
  height: .75rem;
  background-color: #becad6;
  border-radius: 6.25rem;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

<div
  checked=""
  class="c0"
>
  <div
    checked=""
    class="c1"
  >
    <div
      checked=""
      class="c2"
    />
  </div>
</div>
`;

exports[`Switch snapshot checked - true 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:active > div > div {
  width: 1rem;
  left: 1rem;
}

.c0:active > div {
  box-shadow: none;
}

.c1 {
  background-color: #17c671;
  border-radius: 100px;
  border: .0625rem solid #17c671;
  width: 2.1875rem;
  height: 1.125rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 5px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  box-shadow: 0 3px 8px 1px rgba(0,0,0,.2);
}

.c2 {
  content: '';
  position: absolute;
  left: 1.25rem;
  width: .75rem;
  height: .75rem;
  background-color: #ffffff;
  border-radius: 6.25rem;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

<div
  checked=""
  class="c0"
>
  <div
    checked=""
    class="c1"
  >
    <div
      checked=""
      class="c2"
    />
  </div>
</div>
`;

exports[`Switch snapshot clear 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:active > div > div {
  width: 1rem;
  left: 0.1875rem;
}

.c0:active > div {
  box-shadow: none;
}

.c1 {
  background-color: #ffffff;
  border-radius: 100px;
  border: .0625rem solid #e1e5eb;
  width: 2.1875rem;
  height: 1.125rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 5px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  box-shadow: 0 3px 8px 1px rgba(0,0,0,.2);
}

.c2 {
  content: '';
  position: absolute;
  left: 0.1875rem;
  width: .75rem;
  height: .75rem;
  background-color: #e1e5eb;
  border-radius: 6.25rem;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
  </div>
</div>
`;

exports[`Switch snapshot disable - false 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:active > div > div {
  width: 1rem;
  left: 0.1875rem;
}

.c0:active > div {
  box-shadow: none;
}

.c1 {
  background-color: #ffffff;
  border-radius: 100px;
  border: .0625rem solid #e1e5eb;
  width: 2.1875rem;
  height: 1.125rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 5px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  box-shadow: 0 3px 8px 1px rgba(0,0,0,.2);
}

.c2 {
  content: '';
  position: absolute;
  left: 0.1875rem;
  width: .75rem;
  height: .75rem;
  background-color: #e1e5eb;
  border-radius: 6.25rem;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c3 {
  cursor: pointer;
  line-height: 15px;
  color: #5a6169;
  font-size: 15px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
  </div>
  <label
    class="c3"
  >
    test
  </label>
</div>
`;

exports[`Switch snapshot title 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.c0:active > div > div {
  width: 0.75rem;
  left: 0.1875rem;
}

.c0:active > div {
  box-shadow: none;
  background-color: #e9ecef;
}

.c1 {
  background-color: #ffffff;
  border-radius: 100px;
  border: .0625rem solid #e1e5eb;
  width: 2.1875rem;
  height: 1.125rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 5px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  box-shadow: none;
}

.c2 {
  content: '';
  position: absolute;
  left: 0.1875rem;
  width: .75rem;
  height: .75rem;
  background-color: #e1e5eb;
  border-radius: 6.25rem;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c3 {
  cursor: not-allowed;
  line-height: 15px;
  color: #5a6169;
  font-size: 15px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
  </div>
  <label
    class="c3"
  >
    test
  </label>
</div>
`;
